# gha-analyzer

./: .gitignore  .goreleaser.yml  BUILD.bazel  MODULE.bazel  README.md  debug.txt  go.mod  go.sum  install.sh  main.mjs  package-lock.json  package.json  progress.mjs  run.sh  test-cli.sh  trace.json
.beads/: issues.jsonl
.claude/: settings.local.json
.github/workflows/: release.yml  semconv-check.yml  test.yml  traced-test.yml
cmd/gha-analyzer/: BUILD.bazel  args_test.go  main.go
cmd/gha-server/: BUILD.bazel  main.go
cmd/otel-analyzer/: BUILD.bazel  main.go
cmd/otel-explorer/: BUILD.bazel  main.go
cmd/record-demo/: BUILD.bazel  main.go
cmd/simulate/: BUILD.bazel  main.go
deploy/: docker-compose.yml  grafana-dashboard.json  grafana-datasources.yaml  otel-collector-config.yaml  tempo.yaml
docs/: before-after-trace.md  demo-driver.exp  demo-driver.py  demo.cast  gha-otel-mapping.md  record-demo.sh
ideas/: generic-otel.md
pkg/analyzer/: BUILD.bazel  analyzer.go  artifacts.go  data_provider.go  data_provider_test.go  mapping_test.go  metrics.go  metrics_test.go  otel_analyzer.go  otel_explorer.go  otel_test.go  processor.go  storage_converter.go  trace.go  trace_emitter.go  tree.go  trends.go  trends_test.go  types.go
pkg/core/: BUILD.bazel  pipeline.go  types.go
pkg/enrichment/: BUILD.bazel  cicd.go  cicd_extended_test.go  cicd_test.go  domain_cicd.go  domain_db.go  domain_gha.go  domain_http.go  domain_infra.go  domain_messaging.go  domain_rpc.go  enricher.go  enricher_test.go  generic.go  generic_test.go  gha.go  lint.go  lint_test.go  registry.go  registry_test.go  rules.go  rules_test.go  semconv_version.go
pkg/export/otel/: BUILD.bazel  otel.go  otel_test.go
pkg/export/perfetto/: BUILD.bazel  perfetto.go
pkg/export/terminal/: BUILD.bazel  terminal.go
pkg/githubapi/: BUILD.bazel  cache.go  cache_test.go  client.go  ids.go  ids_test.go  otel_test.go  provider.go
pkg/ingest/filter/: BUILD.bazel  filter.go  filter_test.go
pkg/ingest/otlpfile/: BUILD.bazel  chrome.go  jaeger.go  otlpfile.go  otlpfile_test.go  proto.go  protobuf.go  span.go  zipkin.go
pkg/ingest/polling/: BUILD.bazel  polling.go
pkg/ingest/receiver/: BUILD.bazel  receiver.go  receiver_test.go
pkg/ingest/traceapi/: BUILD.bazel  traceapi.go  traceapi_test.go
pkg/ingest/webhook/: BUILD.bazel  webhook.go  webhook_test.go
pkg/output/: BUILD.bazel  colors.go  helpers.go  markdown.go  output.go  styled.go  timeline.go  timeline_test.go  trends.go
pkg/perfetto/: BUILD.bazel  export_test.go  perfetto.go  protobuf.go
pkg/storage/: BUILD.bazel  storage.go  storage_test.go
pkg/tui/: BUILD.bazel  progress.go
pkg/tui/results/: BUILD.bazel  inspector.go  inspector_test.go  items.go  items_test.go  keys.go  model.go  model_test.go  styles.go  timeline.go  timeline_test.go  view.go
pkg/utils/: BUILD.bazel  utils.go  utils_test.go
scripts/: perfetto-ui-check.mjs
src/: analysis-data.mjs  cli-output.mjs  cli.mjs  fetching.mjs  fetching.test.mjs  preview-cli.mjs  utils.mjs  visualization.mjs  workflow.mjs
src/lib/: analysis.mjs  perfetto.mjs  text.mjs  timeline.mjs
test/: cli-output.test.mjs  consolidated.test.mjs  debug.mjs  github-mock.mjs  helpers.test.mjs  main.test.mjs  perfetto-trace.test.mjs  perfetto-ui.test.mjs  perfetto-upload.test.mjs  timeline-grouping.test.mjs  unit.test.mjs
