module(
    name = "gha-analyzer",
    version = "0.0.0",
)

# ── Go rules ─────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.7")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_charmbracelet_bubbles", "com_github_charmbracelet_bubbletea", "com_github_charmbracelet_lipgloss", "com_github_cockroachdb_errors", "com_github_mattn_go_sqlite3", "com_github_stretchr_testify", "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc", "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp", "io_opentelemetry_go_otel_exporters_stdout_stdouttrace", "io_opentelemetry_go_otel_sdk", "io_opentelemetry_go_otel_trace")

# ── Hermetic CC toolchain (zig) ──────────────────────────────────────────────
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

zig = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
)
use_repo(zig, "zig_sdk")

register_toolchains("@zig_sdk//toolchain/...")
