load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "gha-analyzer_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner/gha-analyzer/cmd/gha-analyzer",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/analyzer",
        "//pkg/core",
        "//pkg/enrichment",
        "//pkg/export/otel",
        "//pkg/export/perfetto",
        "//pkg/export/terminal",
        "//pkg/githubapi",
        "//pkg/ingest/otlpfile",
        "//pkg/ingest/polling",
        "//pkg/ingest/traceapi",
        "//pkg/ingest/webhook",
        "//pkg/output",
        "//pkg/perfetto",
        "//pkg/tui",
        "//pkg/tui/results",
        "//pkg/utils",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
    ],
)

go_binary(
    name = "gha-analyzer",
    embed = [":gha-analyzer_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gha-analyzer_test",
    srcs = ["args_test.go"],
    embed = [":gha-analyzer_lib"],
)
