load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "record-demo_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner/otel-explorer/cmd/record-demo",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_creack_pty//:pty",
    ],
)

go_binary(
    name = "record-demo",
    embed = [":record-demo_lib"],
    visibility = ["//visibility:public"],
)
