load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "enrichment",
    srcs = [
        "cicd.go",
        "enricher.go",
        "generic.go",
        "gha.go",
    ],
    importpath = "github.com/stefanpenner/gha-analyzer/pkg/enrichment",
    visibility = ["//visibility:public"],
)

go_test(
    name = "enrichment_test",
    srcs = [
        "cicd_test.go",
        "enricher_test.go",
    ],
    embed = [":enrichment"],
)
