load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "enrichment",
    srcs = [
        "cicd.go",
        "domain_cicd.go",
        "domain_db.go",
        "domain_gha.go",
        "domain_http.go",
        "domain_infra.go",
        "domain_messaging.go",
        "domain_rpc.go",
        "enricher.go",
        "generic.go",
        "gha.go",
        "lint.go",
        "registry.go",
        "rules.go",
        "semconv_version.go",
    ],
    importpath = "github.com/stefanpenner/otel-analyzer/pkg/enrichment",
    visibility = ["//visibility:public"],
)

go_test(
    name = "enrichment_test",
    srcs = [
        "cicd_extended_test.go",
        "cicd_test.go",
        "enricher_test.go",
        "generic_test.go",
        "lint_test.go",
        "registry_test.go",
        "rules_test.go",
    ],
    embed = [":enrichment"],
)
