load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "output",
    srcs = [
        "colors.go",
        "helpers.go",
        "markdown.go",
        "output.go",
        "styled.go",
        "timeline.go",
        "trends.go",
    ],
    importpath = "github.com/stefanpenner/gha-analyzer/pkg/output",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/analyzer",
        "//pkg/perfetto",
        "//pkg/utils",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_charmbracelet_lipgloss//table",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)

go_test(
    name = "output_test",
    srcs = ["timeline_test.go"],
    embed = [":output"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_sdk//instrumentation",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
