load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "perfetto",
    srcs = ["perfetto.go"],
    importpath = "github.com/stefanpenner/gha-analyzer/pkg/perfetto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/analyzer",
        "//pkg/utils",
        "@com_github_cockroachdb_errors//:errors",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)

go_test(
    name = "perfetto_test",
    srcs = ["export_test.go"],
    embed = [":perfetto"],
    deps = [
        "//pkg/analyzer",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
    ],
)
