load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "terminal",
    srcs = ["terminal.go"],
    importpath = "github.com/stefanpenner/otel-explorer/pkg/export/terminal",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/analyzer",
        "//pkg/enrichment",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)
