load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "receiver",
    srcs = ["receiver.go"],
    importpath = "github.com/stefanpenner/otel-analyzer/pkg/ingest/receiver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ingest/otlpfile",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)
