load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "webhook",
    srcs = ["webhook.go"],
    importpath = "github.com/stefanpenner/gha-analyzer/pkg/ingest/webhook",
    visibility = ["//visibility:public"],
)

go_test(
    name = "webhook_test",
    srcs = ["webhook_test.go"],
    embed = [":webhook"],
)
